Applaying 100vh to .content-wrapper to prevent the page from ugly "jumping"

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -66,3 +66,7 @@ body,
 [ui-view].ng-leave {
 	display: none;
 }
+
+.content-wrapper {
+	height: 100vh;
+}
